--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "samsara-release",
+  "name": "simsalog",
   "version": "0.0.1",
   "description": "Conflict free changelogs and release management",
   "main": "cli.js",
