--- a/package.json
+++ b/package.json
@@ -19,6 +19,16 @@
   "dependencies": {
     "commander": "^2.20.0",
     "inquirer": "^6.2.2",
+    "prettier": "^1.17.0",
     "semver": "^6.0.0"
+  },
+  "devDependencies": {
+    "husky": "^1.3.1",
+    "pretty-quick": "^1.10.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
