--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "simsala",
   "version": "0.0.5",
   "description": "Conflict free changelogs and release management",
-  "main": "cli.js",
+  "main": "src/cli.js",
   "scripts": {
-    "start": "node cli.js",
+    "start": "node src/cli.js",
     "lint": "prettier *.js --write",
     "test": "jest"
   },
