--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,4 +19,4 @@ jobs:
       # - name: use ssh repo
       #   run: git config user.email "bot@lunie.io" && git config user.name "Release Lunie Bot"
       - name: create release PR
-        run: yarn start release-candidate --semver patch --owner faboweb --repo simsala --token ${{ secrets.GIT_BOT_TOKEN }}
+        run: yarn start release-candidate --semver patch --token ${{ secrets.GIT_BOT_TOKEN }}
