fix deps install

--- a/.github/workflows/checkChangelog.yml
+++ b/.github/workflows/checkChangelog.yml
@@ -12,9 +12,13 @@ jobs:
       - uses: actions/checkout@master
       - name: Use Node.js
         uses: actions/setup-node@master
+      ## What you should use
       #   - name: Add simsala
       #     run: npm install simsala
       #   - name: Check if changlog was updated
       #     run: node node_modules/simsala/src/cli.js check
+      ## In this repository we use Simsala directly
+      - name: Install dependencies
+        run: npm install
       - name: Check if changlog was updated
         run: npm run start -- check --root-branch master
