--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,4 +17,4 @@ jobs:
       - name: configure release bot
         run: git config user.email "bot@simsala.de" && git config user.name "Simsala Release Bot"
       - name: create release PR
-        run: yarn start release-candidate --semver patch --token ${{ secrets.GIT_BOT_TOKEN }} -b origin/master
+        run: yarn start release-candidate --semver patch --token ${{ secrets.GIT_BOT_TOKEN }} -b master
