--- a/.github/workflows/checkChangelog.yml
+++ b/.github/workflows/checkChangelog.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Check if changlog was updated
-        run: npm run start check -- --root-branch master
+        run: npm run start check -- --root-branch origin/master
