--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "commander": "^2.20.0",
     "inquirer": "^6.2.2",
+    "lodash.groupby": "^4.6.0",
     "semver": "^6.0.0"
   },
   "devDependencies": {
